# Cloud-Optimizer-Platform

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  alert.rules  cloud_integrations.py  docker-compose.yml  package.json  prometheus.yml  recording.rules.yml  requirements.txt  temp_ccn_main.py  temp_main.py  temp_nginx.conf
.github/: pull_request_template.md
api-gateway/: Dockerfile  cloud_integrations.py  main.py
api-gateway-service/: main.go
aws-cost-explorer-client/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
aws-cost-explorer-client/docs/: usage.md
aws-cost-explorer-client/src/aws_cost_explorer/: __init__.py  client.py  exceptions.py  models.py
aws-cost-explorer-client/tests/: test_client.py
azure-cost-management-client/: .gitignore  LICENSE  README.md  pyproject.toml
cloud-budget-manager/: .gitignore  LICENSE  README.md  pyproject.toml
cloud-budget-manager/src/cloud_budget_manager/: __init__.py  exceptions.py  manager.py  models.py
cloud-budget-manager/tests/: test_manager.py
cloud-compliance-manager/: .gitignore  LICENSE  README.md  pyproject.toml
cloud-compliance-manager/src/cloud_compliance_manager/: __init__.py  exceptions.py  models.py
cloud-cost-normalization/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
cloud-cost-normalization/src/cloud_cost_normalization/: __init__.py  currency.py  exceptions.py  models.py  normalizer.py
cloud-cost-normalization/tests/: test_currency.py  test_normalizer.py
cloud-cost-optimizer/: .gitignore  LICENSE  README.md  pyproject.toml
cloud-cost-optimizer/src/cloud_cost_optimizer/: __init__.py  exceptions.py  models.py  optimizer.py
cloud-cost-optimizer/tests/: test_optimizer.py
cloud-governance-manager/: .gitignore  LICENSE  README.md  pyproject.toml
cloud-network-manager/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
cloud-network-manager/src/cloud_network_manager/: __init__.py  exceptions.py  manager.py  models.py
cloud-network-manager/src/cloud_network_manager/vpn_modules/aws_azure/: README.md  __init__.py  aws_client.py  azure_client.py  exceptions.py  manager.py  models.py
cloud-network-manager/src/cloud_network_manager/vpn_modules/aws_gcp/: README.md  __init__.py  aws_client.py  exceptions.py  gcp_client.py  manager.py  models.py
cloud-network-manager/src/cloud_network_manager/vpn_modules/azure_gcp/: README.md  __init__.py  azure_client.py  exceptions.py  gcp_client.py  manager.py  models.py
cloud-network-manager/tests/: test_manager.py
cloud-resource-inventory/: .gitignore  Dockerfile  README.md  pyproject.toml
cloud-resource-inventory/src/cloud_resource_inventory/: __init__.py  exceptions.py  inventory.py  models.py
cloud-resource-inventory/tests/: test_inventory.py
config/: default.json
cost-analyzer/: Dockerfile  README.md  main.py  pyproject.toml
cost-dashboard/: package-lock.json  package.json
cost-data-storage-service/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
cost-data-storage-service/src/cost_storage/: __init__.py  exceptions.py  models.py
cost-estimation-engine/: .gitignore  LICENSE  README.md  pyproject.toml
cost-estimation-engine/src/cost_estimation/: __init__.py  exceptions.py  models.py
currency-conversion-service/: .gitignore  LICENSE  README.md  pyproject.toml
currency-conversion-service/src/currency_conversion/: __init__.py  exceptions.py  models.py
frontend/: Dockerfile  nginx.conf  package.json
gcp-billing-client/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
network-cost-comparison-service/: .gitignore  LICENSE  README.md  pyproject.toml
network-cost-comparison-service/src/network_comparison/: __init__.py  comparison.py  exceptions.py  models.py
network-cost-comparison-service/src/network_comparison/providers/: aws.py  azure.py  gcp.py
resource-identification-service/: .gitignore  LICENSE  README.md  pyproject.toml
resource-identification-service/src/resource_identification/: __init__.py  exceptions.py  models.py
resource-optimizer/: Dockerfile  README.md  main.py  pyproject.toml
resource-requirements-parser/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
resource-requirements-parser/examples/: README.md  parse_infrastructure.py
resource-requirements-parser/examples/cloudformation/: template.yaml
resource-requirements-parser/examples/terraform/: main.tf  variables.tf
resource-requirements-parser/src/resource_requirements_parser/: __init__.py  exceptions.py  models.py  parser.py
resource-requirements-parser/src/resource_requirements_parser/parsers/: cloudformation.py  terraform.py
resource-requirements-parser/tests/: conftest.py  test_cloudformation_parser.py  test_exceptions.py  test_models.py  test_parser.py  test_terraform_parser.py
scripts/: README.md  export_requirements.py  health_check.py  poetry_export.sh  requirements.txt  restart_api_gateway.py  run_api_gateway.py  run_cost_normalization.py  setup_dev_env.bat  setup_dev_env.sh
src/: index.js
storage-cost-comparison-service/: .gitignore  LICENSE  README.md  pyproject.toml
storage-cost-comparison-service/src/storage_comparison/: __init__.py  comparison.py  exceptions.py  models.py
storage-cost-comparison-service/src/storage_comparison/providers/: aws.py  azure.py  gcp.py
terraform-cost-analyzer/: .gitignore  LICENSE  README.md  pyproject.toml
terraform-cost-analyzer/src/terraform_cost_analyzer/: __init__.py  analyzer.py  exceptions.py  models.py  parser.py
terraform-cost-analyzer/tests/: test_analyzer.py  test_parser.py
terraform-provider-cloudoptimizer/: Makefile  (+3 more)
vm-cost-comparison-service/: .gitignore  LICENSE  README.md  pyproject.toml
vm-cost-comparison-service/src/vm_comparison/: __init__.py  comparison.py  exceptions.py  models.py
vm-cost-comparison-service/src/vm_comparison/providers/: aws.py  azure.py  gcp.py
(+58 files in other folders)
