[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloud-cost-optimizer"
version = "0.1.0"
description = "A Python library for optimizing cloud costs across different services and providers"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["cloud", "cost", "optimization", "finops", "aws", "azure", "gcp"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "aws-cost-explorer-client>=0.1.0",  # Our first project
    "cloud-cost-normalization>=0.1.0",  # Our second project
    "boto3>=1.26.0",                    # AWS SDK
    "azure-mgmt-compute>=29.0.0",       # Azure Compute Management
    "azure-mgmt-storage>=21.0.0",       # Azure Storage Management
    "azure-mgmt-network>=21.0.0",       # Azure Network Management
    "azure-identity>=1.7.0",            # Azure Authentication
    "google-cloud-compute>=1.0.0",      # GCP Compute Engine API
    "google-cloud-storage>=2.0.0",      # GCP Storage API
    "google-cloud-billing>=1.9.0",      # GCP Billing API
    "pandas>=2.0.0",                    # Data analysis
    "numpy>=1.23.0",                    # Numerical computations
    "scikit-learn>=1.0.0",             # Machine learning for usage pattern analysis
    "pydantic>=2.0.0",                 # Data validation
    "click>=8.0.0",                    # CLI interface
    "rich>=13.0.0",                    # Rich terminal output
    "requests>=2.28.0",                # HTTP client
    "pyyaml>=6.0.0",                  # YAML parsing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pylint>=2.15.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
cloudopt = "cloud_cost_optimizer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=src"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pylint.messages_control]
disable = ["C0111", "C0103"]

[tool.pylint.format]
max-line-length = 88
