[project]
name = "resource-optimizer"
version = "0.1.0"
description = "Resource optimization service for cloud platforms."
authors = [
    {name = "ZacheryKuykendall zachery@cheshireglobal.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "boto3 (>=1.36.19,<2.0.0)",
    "botocore (>=1.36.19,<2.0.0)",
    "azure-identity (>=1.20.0,<2.0.0)",
    "azure-mgmt-compute (>=34.0.0,<35.0.0)",
    "azure-mgmt-commerce (>=6.0.0,<7.0.0)",
    "azure-core (>=1.32.0,<2.0.0)",
    "google-cloud-compute (>=1.25.0,<2.0.0)",
    "google-cloud-billing (>=1.16.0,<2.0.0)",
    "google-api-core (>=2.24.1,<3.0.0)"
]

packages = [{ include = "resource_optimizer" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"

